Improve nav styling and fix issue where form elements were going off page on mobile

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -16,6 +16,11 @@
   padding-left: 15px;
   padding-right: 15px;
   list-style-type: none;
+
+  @media(min-width: 768px) {
+    padding-left: 20vw;
+    padding-right: 20vw;
+  }
 }
 
 .navbar ul .nav-elem-right {
